--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <script type="text/javascript" src="funciones.js"></script>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- Menu -->
@@ -57,41 +58,42 @@
         </section>
 
         <section class="ubicacion">
-            <h1 class="titulo">Nuestra Ubicacion</h1>
+            <h1 class="titulo ubicacion-titulo">Nuestra Ubicacion</h1>
             <div class="linea"></div>
             <p>Nuesto local esta ubicado en el centro de la ciudad</p>
             <div class="ubicacion-mapa">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d37829.925852192646!2d-74.06451252385011!3d4.703674609769161!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.
-                    1!2m1!1sOracle%20NetSuite%20colombia!5e0!3m2!1ses-419!2sco!4v1707309530122!5m2!1ses-419!2sco" 
-                    width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                </div>
+                <iframe class="cs-ubicacion-iframe" src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d37829.925852192646!2d-74.06451252385011!3d4.703674609769161!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.
+                1!2m1!1sOracle%20NetSuite%20colombia!5e0!3m2!1ses-419!2sco!4v1707309530122!5m2!1ses-419!2sco" 
+                width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+                </iframe>
+            </div>
         </section>
-
-        <section id="diferencial" class="diferenciales">
+        <!--  -->
+        <section id="id-diferente" class="cs-diferente">
             <h1 class="titulo">Diferenciales</h1>
             <div class="linea"></div>
-            <div class="contenido">
-                <div class="lista-diferenciales">
+            <div class="cs-diferente-contenido">
+                <div class="cs-diferente-lista" >
                     <ul>
-                        <li class="items">Atencion personalizada a los clientes</li>
-                        <li class="items">Espacio amplios y confortables</li>
-                        <li class="items">Localizacion</li>
-                        <li class="items">Profesionales de la belleza</li>
-                        <li class="items">Puntualidad</li>
-                        <li class="items">Limpieza</li>
+                        <li class="cs-items">Atencion personalizada a los clientes</li>
+                        <li class="cs-items">Espacio amplios y confortables</li>
+                        <li class="cs-items">Localizacion</li>
+                        <li class="cs-items">Profesionales de la belleza</li>
+                        <li class="cs-items">Puntualidad</li>
+                        <li class="cs-items">Limpieza</li>
                     </ul>
                 </div>
-                <div class="imagen-diferencial">
+                <div class="cs-diferente-imagen">
                     <figure>
-                        <img class="imagen-diferencial-1" src="imagenes/diferenciales.jpg">
+                        <img class="cs-diferente-figure" src="imagenes/diferenciales.jpg">
                         <figcaption>Oficio hecho arte</figcaption>                
                     </figure>
                 </div>
             </div>
         </section>
-
-        <div class="video">
-            <iframe src="https://www.youtube.com/embed/QmtPlbxB7rA?si=Yv59XK4AvVBJ4J_c&amp;start=37" 
+        <!--  -->
+        <div class="cs-diferente-video">
+            <iframe class="cs-diferente-iframe" src="https://www.youtube.com/embed/QmtPlbxB7rA?si=Yv59XK4AvVBJ4J_c&amp;start=37" 
             title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
         </iframe>
         </div>
@@ -139,40 +141,104 @@
         </section>
 
         <div class="formulario-contacto" id="formulario-contacto">
+            <div class="contacto-titulo">
+                <h2 class="titulo">Contacto</h2>
+                <div class="linea"></div>
+            </div>
+            <section class="contacto" id="contacto">                        
+                <div class="contacto-detalle">
+                    <div class="contacto-detalle-grupo">
+                        <p class="contacto-etiqueta">Dirección:</p>
+                        <p class="contacto-texto">Medellin, Colombia - Latam</p>
+                    </div>
+                    <div class="contacto-detalle-grupo">
+                        <p class="contacto-etiqueta">Email:</p>
+                        <p class="contacto-texto">jyzapata@gmail.com</p>
+                    </div>
+                    <div class="contacto-detalle-grupo texto-largo">
+                        <p class="contacto-texto">
+                            Deje su mensaje y con gusto se los responderemos. Muchas gracias.
+                        </p>
+                    </div>
+                </div>
+                <form class="contacto-formulario" name="contacto" netlify>
+                    <div class="contacto-formulario-grupo">
+                        <label class="contacto-etiqueta" for="name">Nombre</label>
+                        <input required type="text" name="name" id="name" />
+                    </div>
+                    <div class="contacto-formulario-grupo">
+                        <label class="contacto-etiqueta"  for="email">Email</label>
+                        <input required type="email" name="email" id="email" />
+                    </div>
+                    <div class="contacto-formulario-grupo">
+                        <label class="contacto-etiqueta" for="message">Mensaje</label>
+                        <textarea required name="message" id="message" rows="6"></textarea>
+                    </div>
+                    <div class="cs-div-contacto-enviar">
+                        <button type="submit" class="cs-btn-contacto-enviar">Enviar</button>
+                    </div>
+                </form>
+                <div class="contacto-horario">
+                    <table class="cs-contacto-tabla">
+                        <thead>
+                            <th>Dia</th>
+                            <th>Horario</th>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Lunes</td>
+                                <td>9:00am - 7:00pm</td>
+                            </tr>
+                            <tr>
+                                <td>Miercoles</td>
+                                <td>8:00am - 8:00pm</td>
+                            </tr><tr>
+                                <td>Viernes</td>
+                                <td>7:00am - 9:00pm</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>                                                                                                                       
+            </section>
+        </div>
+
+        <!-- <div class="formulario-contacto" id="formulario-contacto">
             <section class="contacto" id="contacto">
                 <div class="contacto-titulo">
                     <h2 class="titulo">Contacto</h2>
                     <div class="linea"></div>
                 </div>
                 <div class="contacto-detalle">
-                <div class="contacto-detalle-grupo">
-                    <p class="contacto-etiqueta">Dirección:</p>
-                    <p class="contacto-texto">Medellin, Colombia - Latam</p>
-                </div>
-                <div class="contacto-detalle-grupo">
-                    <p class="contacto-etiqueta">Email:</p>
-                    <p class="contacto-texto">jyzapata@gmail.com</p>
-                </div>
-                <div class="contacto-detalle-grupo">
-                    <p class="contacto-texto">
-                    Deje su mensaje y con gusto se los responderemos. Muchas gracias.
-                    </p>
-                </div>
+                    <div class="contacto-detalle-grupo">
+                        <p class="contacto-etiqueta">Dirección:</p>
+                        <p class="contacto-texto">Medellin, Colombia - Latam</p>
+                    </div>
+                    <div class="contacto-detalle-grupo">
+                        <p class="contacto-etiqueta">Email:</p>
+                        <p class="contacto-texto">jyzapata@gmail.com</p>
+                    </div>
+                    <div class="contacto-detalle-grupo">
+                        <p class="contacto-texto">
+                        Deje su mensaje y con gusto se los responderemos. Muchas gracias.
+                        </p>
+                    </div>
                 </div>
                 <form class="contacto-formulario" name="contacto" netlify>
-                <div class="contacto-formulario-grupo">
-                    <label class="contacto-etiqueta" for="name">Nombre</label>
-                    <input required type="text" name="name" id="name" />
-                </div>
-                <div class="contacto-formulario-grupo">
-                    <label class="contacto-etiqueta"  for="email">Email</label>
-                    <input required type="email" name="email" id="email" />
-                </div>
-                <div class="contacto-formulario-grupo">
-                    <label class="contacto-etiqueta" for="message">Mensaje</label>
-                    <textarea required name="message" id="message" rows="6"></textarea>
-                </div>
-                <button type="submit" class="contacto-enviar">Enviar</button>
+                    <div class="contacto-formulario-grupo">
+                        <label class="contacto-etiqueta" for="name">Nombre</label>
+                        <input required type="text" name="name" id="name" />
+                    </div>
+                    <div class="contacto-formulario-grupo">
+                        <label class="contacto-etiqueta"  for="email">Email</label>
+                        <input required type="email" name="email" id="email" />
+                    </div>
+                    <div class="contacto-formulario-grupo">
+                        <label class="contacto-etiqueta" for="message">Mensaje</label>
+                        <textarea required name="message" id="message" rows="6"></textarea>
+                    </div>
+                    <div class="cs-div-contacto-enviar">
+                        <button type="submit" class="cs-div-contacto-enviar">Enviar</button>
+                    </div>                    
                 </form>
                 <div class="contacto-horario">
                     <table>
@@ -196,7 +262,7 @@
                     </table>
                 </div>
             </section>
-        </div>
+        </div> -->
                 <!-- la propiedad alt nos ayuda en caso tal que algun navegador no pueda visualizar la imagen-->            
         <footer>
             <div class="grid-container">
@@ -211,11 +277,28 @@
                     <i class='bx bxl-google-plus-circle bx-sm bx-burst-hover espacio' style='color:#ffffff' ></i>
                 </div>
                 <div class="footer-derechos">
-                    <p class="copyrightx">&copy Copyright Baberia Alura 2024</p>
+                    <p class="copyright">&copy Powered by Jovany ZH for ONE-Alura</p>
                 </div>
             </div>
         </footer>
     </main>
-
+    <!-- <footer>
+        <section class="seccion-footer">
+            <div class="footer-imagenes">
+                <img src="img/logo-one-3-2.png" alt="" class="img-footer-one">
+                <img src="img/logo-aluralatam-oracle-2.png" alt="" class="img-footer-alura">
+            </div>
+            <div class="footer-redes">
+                <h3 style="color: #ffffff;">Siguenos en:</h3>
+                <i class='bx bxl-facebook-circle bx-sm bx-burst-hover espacio' style='color:#ffffff'></i>
+                <i class='bx bxl-instagram-alt bx-sm bx-burst-hover espacio' style='color:#ffffff'></i>
+                <i class='bx bxl-youtube bx-sm bx-burst-hover espacio' style='color:#ffffff'></i>
+                <i class='bx bxl-google-plus-circle bx-sm bx-burst-hover espacio' style='color:#ffffff' ></i>
+            </div>
+            <div class="footer-derechos">
+                <p class="copyrightx">&Powered by Jovany ZH for ONE-Alura</p>
+            </div>
+        </section>
+    </footer> -->
 </body>
 </html>
